Add post-build script to clean ion-page-invisible styles
Introduces scripts/remove-ion-page-invisible.js and updates the build script to run it after ng build. The script modifies built CSS and HTML files in the www directory to replace .ion-page-invisible rules with non-hiding styles, addressing issues with hidden Ionic pages after build.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build && node scripts/remove-ion-page-invisible.js",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint"
